# AI-Studio-Local

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LTX_STUDIO_LOCAL_REAL_IMPLEMENTATION_TODO_FOR_JUNIE.md  LTX_STUDIO_LOCAL_TODO_FOR_JUNIE.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
WIKI/: API-Contract.md  Architecture.md  Continuity-Library.md  Development-Setup.md  Generation-Engine.md  Home.md  Mock-Removal-Audit.md  Model-Manager.md  Project-Format.md  Testing.md  _Footer.md  (+2 more)
worker/: README.md  pyproject.toml
worker/ai_video_worker/: api.py  config.py  logging_config.py  main.py
worker/ai_video_worker/engine/: adapter.py  ltx.py  mlx_adapter.py  output.py
worker/ai_video_worker/jobs/: store.py
worker/ai_video_worker/schemas/: api.py
worker/ai_video_worker/utils/: models.py  profiler.py
worker/docs/manual-tests/: real-generation.md
worker/ltx_worker/: api.py  config.py  logging_config.py  main.py
worker/ltx_worker/engine/: adapter.py  base.py  ltx.py  mlx_adapter.py  mock.py  output.py
worker/ltx_worker/jobs/: store.py
worker/ltx_worker/schemas/: api.py
worker/ltx_worker/utils/: models.py  profiler.py
worker/tests/: conftest.py  test_api.py  test_api_contract.py  test_config.py  test_durable_jobs.py  test_engine_adapter.py  test_environment_boundary.py  test_errors.py  test_export.py  test_generation.py  test_image_to_video.py  test_model_import.py  test_models.py  test_profiler.py  test_progress.py  test_sse_heartbeat.py  test_validation.py
(+190 files in other folders)
